syntax = "proto3";

option csharp_namespace = "PlatformService";

service GrpcPlatform {
    rpc GetAllPlaforms(GettAllRequest) returns (PlatformReply);
}

message GettAllRequest {}

message GrpcPlatformReply {
    int32 platform_id = 1;
    string name = 2;
    string publisher = 3;
}

message PlatformReply {
    repeated GrpcPlatformReply platforms = 1;
}